compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bit_arrays__bits.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  <<x:bits>>\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) toBitArray;
  
  go = x: toBitArray [ x.buffer ];
in {}
