compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bit_arrays__empty.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<>>\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) toBitArray;
  
  go = {}: toBitArray [ ];
in {}
