compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bit_arrays__match_binary_size.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<_, a:2-bytes>> = x\n  let assert <<_, b:bytes-size(2)>> = x\n  #(a, b)\n}\n"
---
let
  inherit
    (builtins.import ./../gleam.nix)
    byteSize
    byteAt
    binaryFromBitSlice
    seqAll;
  
  go =
    x:
      let
        _assert' =
          if byteSize x != 3
          then builtins.throw "Assignment pattern did not match"
          else null;
        a = builtins.seq _assert' (binaryFromBitSlice x 1 3);
        _assert''1 =
          if byteSize x != 3
          then builtins.throw "Assignment pattern did not match"
          else null;
        b = builtins.seq _assert''1 (binaryFromBitSlice x 1 3);
      in seqAll [ _assert' _assert''1 ] [ a b ];
in {}
