compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bit_arrays__match_sized.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<a:16, b:8>> = x\n  #(a, b)\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) makeError byteSize intFromBitSlice;
  
  go =
    x:
      let
        _assert' =
          if byteSize x != 3
          then
            builtins.throw
              (makeError
                "assignment_no_match"
                "my/mod"
                3
                "go"
                "Assignment pattern did not match"
                { value = x; })
          else null;
        a = builtins.seq _assert' (intFromBitSlice x 0 2);
        b = builtins.seq _assert' (intFromBitSlice x 2 3);
      in builtins.seq _assert' [ a b ];
in {}
